# clash-cli

./: .gitignore  AGENTS.md  Cargo.toml  REQUIREMENTS.md
src/: lib.rs  main.rs
src/commands/: mod.rs
src/config/: mod.rs
src/proxy/: mod.rs  mode.rs  models.rs  node.rs  subscription.rs
src/utils/: logger.rs  mod.rs  network.rs
