[package]
name = "clash-cli"
version = "0.1.0"
edition = "2021"
description = "A modern CLI proxy client based on Mihomo"
authors = ["Your Name"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
flate2 = "1.0"
zip = "0.6"
dirs = "5.0"
sysinfo = "0.30"

[build-dependencies]
